# Spotify-Offline

./: .gitignore  ABRIR-YT-MP3-STUDIO-WEB.cmd  ABRIR-YT-MP3-STUDIO-WIFI.cmd  ARCHITECTURE.md  CLAUDE.md  GOOGLE_DRIVE_SETUP.md  INICIAR-SERVIDOR-IPHONE.cmd  KNOWN_LIMITATIONS.md  README.md  RENOVAR-CLAVE-SERVIDOR.cmd  pyproject.toml
.codex/: dsb-state-ytmp3-visual-v1.json
.github/workflows/: deploy-pwa.yml
.playwright-cli/: page-2026-07-20T09-57-03-021Z.yml  page-2026-07-20T09-57-29-495Z.yml  page-2026-07-20T09-58-05-378Z.yml  page-2026-07-20T09-58-19-175Z.yml  page-2026-07-20T09-58-21-430Z.yml  page-2026-07-20T09-58-40-700Z.yml  page-2026-07-20T09-58-54-347Z.yml  page-2026-07-20T15-02-39-943Z.yml  page-2026-07-20T15-02-57-380Z.yml  page-2026-07-20T15-03-13-772Z.yml
build-update/ytmp3studio/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.toc  warn-ytmp3studio.txt  xref-ytmp3studio.html
packaging/: installer.iss  version_info.txt  ytmp3studio.spec
prototype/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
scripts/: build.ps1  start-mobile-server.ps1  start-web-server.ps1  verify.ps1
src/ytmp3studio/: __init__.py  __main__.py  app.py  mobile_server.py
tests/integration/: test_download_to_drive.py  test_drive_local_path_migration.py  test_drive_persistence.py  test_persistence.py  test_playlist_persistence.py  test_smoke_entrypoint.py
tests/ui/: test_pages.py  test_playlists_page.py
tests/unit/: test_exportify_importer.py  test_facade.py  test_ffmpeg_adapter.py  test_google_drive_client.py  test_google_drive_service.py  (+16 more)
(+45 files in other folders)
